--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <ul>
   <li><a href="chats/chat-20250619.html">🗨️ 聊天記錄：2025/06/19</a></li>
   <li><a href="texts/test-chat.html">📄 詩：夏日星辰</a></li>
-  <li><a href="texts/note-about-ideas.html">🧠 靈感備忘錄</a></li>
+  <li><a href="texts/note-about-ideas.html">🧠 靈感備忘錄444444</a></li>
   <!-- 你可以在這裡繼續加更多連結 -->
 </ul>
 
