--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
   <li><a href="test-chat.html">📄 詩：夏日星辰</a></li>
   <li><a href="https://chatgpt.com/share/6854a202-7d30-8012-a8f5-7ba6f2f1dd76">🧠 靈感備忘錄444444</a></li>
   <li><a href="test12.html">📄 詩：夏日星辰</a></li>
+   <li><a href="test_white.html">🧠 靈感備忘錄444444</a></li>
+  
   <!-- 你可以在這裡繼續加更多連結 -->
 </ul>
 
