--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
 <ul>
   <li><a href="chats/chat-20250619.html">🗨️ 聊天記錄：2025/06/19</a></li>
-  <li><a href="test-chat.html">📄 詩：夏日星辰</a></li>
+  <li><a href="test-chat.html">黎初衡</a></li>
   <li><a href="https://chatgpt.com/share/6854a202-7d30-8012-a8f5-7ba6f2f1dd76">🧠 靈感備忘錄444444</a></li>
-  <li><a href="test12.html">📄 詩：夏日星辰</a></li>
-   <li><a href="test123.html">🧠 靈感備忘錄444444</a></li>
+  <li><a href="test12.html">周晏慈</a></li>
+   <li><a href="test123.html">白紀宣</a></li>
   
   <!-- 你可以在這裡繼續加更多連結 -->
 </ul>
