--- a/test12.html
+++ b/test12.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title>周晏慈</title>
+  <title>周晏慈啊啊啊啊</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; max-width: 700px; margin: auto; }
     a { color: #007acc; text-decoration: none; }
@@ -14,7 +14,7 @@
 
 <a href="index.html">← 回首頁</a>
 
-<h1>台灣旅遊攻略</h1>
+<h1>周晏慈</h1>
 
 <p>Date: 2025-06-20
 Character: 周晏慈
