--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <li><a href="https://chatgpt.com/share/6854a202-7d30-8012-a8f5-7ba6f2f1dd76">🧠 靈感備忘錄444444</a></li>
   <li><a href="test12.html">周晏慈</a></li>
    <li><a href="test123.html">白紀宣</a></li>
-    <li><a href="Li_You-Chen.html">白紀宣</a></li>
+    <li><a href="Li_You-Chen.html">黎佑辰</a></li>
   
   <!-- 你可以在這裡繼續加更多連結 -->
 </ul>
