--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
   <li><a href="test12.html">周晏慈</a></li>
   <li><a href="test123.html">白紀宣</a></li>
   <li><a href="Li_You-Chen.html">黎佑辰</a></li>
+  <li><a href="No.8.html">八號小隊</a></li>
+  
 </ul>
 
 <script>
