--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <li><a href="test12.html">周晏慈</a></li>
   <li><a href="test123.html">白紀宣</a></li>
   <li><a href="Li_You-Chen.html">黎佑辰</a></li>
-  <li><a href="No_8.html">八號小隊</a></li>
+  <li><a href="no_8.html">八號小隊</a></li>
   
 </ul>
 
