--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   <li><a href="test123.html">白紀宣</a></li>
   <li><a href="Li_You-Chen.html">黎佑辰</a></li>
   <li><a href="no_8.html">八號小隊</a></li>
+   <li><a href="SST.html">SST偶夢(=ﾟωﾟ)ﾉ</a></li>
   
 </ul>
 
