--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <li><a href="no_8.html">八號小隊</a></li>
    <li><a href="SST.html">SST偶夢(=ﾟωﾟ)ﾉ</a></li>
    <li><a href="Leon.html">萊昂</a></li>
-  
+  <li><a href="Snowball.html">哥哥</a></li>
 </ul>
 
 <script>
