--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <li><a href="Li_You-Chen.html">黎佑辰</a></li>
   <li><a href="no_8.html">八號小隊</a></li>
    <li><a href="SST.html">SST偶夢(=ﾟωﾟ)ﾉ</a></li>
-   <li><a href="Leon.html">萊昂</a></li>
+   <li><a href="Leon.html">萊昂1</a></li>
   <li><a href="Snowball.html">哥哥</a></li>
 </ul>
 
